prevent array out of bounds errors on resize (larger than initial size)
a more complete fix would be to dynamically add to the length of the arrays on resize, but it might be expensive and i don't think debouncing is an option (without throwing the same error i'm trying to avoid)

--- a/main.css
+++ b/main.css
@@ -26,8 +26,8 @@ body {
 }
 
 #canvas {
-  margin-left: 50%;
-  transform: translate(-50%);
+  display: flex;
+  justify-content: center;
 }
 
 h2 {
